# Cutlib

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  Doxyfile  INSTALL  License.txt  Makefile  Makefile.am  Makefile.in  Makefile_hand  NEWS  README  README.md  README.txt  Readme.md  config.h.in  configure  configure.ac  cut-config.in  make_setting
cmake/: CompileOptionSelector.cmake  FindCutlib.cmake  Toolchain_K.cmake  Toolchain_fx10.cmake  Toolchain_fx100.cmake  cutlib_package.cmake
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/doxygen/: Doxyfile
doxygen/: Doxyfile  Doxyfile_app
examples/: CMakeLists.txt  Makefile  Makefile_hand
examples/Cell/: CMakeLists.txt  Config.h  Makefile  Makefile.am  Makefile.in  depend.inc  main.cpp  test.conf
examples/Cell_Normal/: CMakeLists.txt  Config.h  Makefile  Makefile.in  Makefile_hand  depend.inc  main.cpp  test-large.conf  test.conf
examples/Node/: CMakeLists.txt  Config.h  Makefile  Makefile.in  depend.inc  main.cpp  small.tpp  test.conf
examples/Node_Normal/: CMakeLists.txt  Config.h  Makefile  Makefile.am  Makefile.in  Makefile_hand  depend.inc  large.tpp  main.cpp  test.conf
examples/NonUniformCell/: Makefile  main.cpp  test.conf
examples/Octree/: CMakeLists.txt  Config.h  Makefile  Makefile.am  Makefile.in  Makefile_hand  depend.inc  main.cpp  test-large.conf  test.conf
examples/STL_data/: largeA.stl
examples/util/: CMakeLists.txt
examples/util/include/: ConfigBase.h  CutTest.h  Tuple.h  outputVtk.h
examples/util/src/: ConfigBase.cpp  CutTest.cpp  outputVtk.cpp
include/: Cutlib.h  SklCompatibility.h  Version.h  Version.h.in  cutVersion.h.in
include/CutInfo/: CutInfo.h  CutInfoArray.h  CutInfoOctree.h  CutNormalArray.h
include/GridAccessor/: Cell.h  GridAccessor.h  NUCell.h  Node.h
include/RepairPolygonData/: RepairPolygonData.h
src/: CMakeLists.txt  CutBoundary.cpp  CutBoundary.h  CutOctree.cpp  CutOctree.h  CutSearch.cpp  CutSearch.h  CutTiming.cpp  CutTiming.h  CutUtil.cpp.org  Cutlib.cpp  Makefile  Makefile.am  Makefile.in  Makefile_hand  RepairPolygonData.cpp  TargetTriangle.cpp  TargetTriangle.h  depend.inc
test/: Config.cpp  Config.h  Makefile  README.txt  large.xml  outputVtk.cpp  outputVtk.h  small.xml  test.cpp  test1-large.conf  test1.conf  test1.cpp  test1Config.h  test2-large.conf  test2.conf  test2.cpp  test2Config.h  test3.conf  test3.cpp  test3Check.h  test3Config.h
test/data/: testA.stl  testB.stl
